HOCS-4656: addition of PriorityPolicies
Addition of PriorityPolicies as a JOSN configuration file that is read
in through the JSON file reader. This removes
a need to call hocs-info-service to retrieve these.